# WrightDistribution

./: Makefile  README.md  pyproject.toml  wright_distribution.ipynb
notebooks/: quadax_comparison.py  quadrature_explained.py  wright_distribution.py
src/wrightdistribution/: __init__.py  quadrature.py  wright.py
tests/: conftest.py  julia_reference.json  test_gradients.py  test_integration.py  test_wright.py
