[project]
name = "wrightdistribution"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "jax>=0.4",
    "jaxlib>=0.4",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
]
notebook = [
    "marimo>=0.9",
    "matplotlib>=3.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wrightdistribution"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88

[dependency-groups]
dev = [
    "ruff>=0.15.1",
]
notebook = [
    "marimo>=0.19.11",
    "matplotlib>=3.10.8",
]
test = [
    "pytest>=9.0.2",
]
