[project]
name = "wrightdistribution"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "jax>=0.4",
    "jaxlib>=0.4",
    "matplotlib>=3.10.8",
    "scienceplots>=2.2.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
]
notebook = [
    "marimo>=0.20.2",
    "matplotlib>=3.10.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wrightdistribution"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88

[dependency-groups]
dev = [
    "ruff>=0.15.1",
]
notebook = [
    "marimo>=0.20.2",
    "matplotlib>=3.10.8",
    "quadax>=0.2.11",
]
test = [
    "pytest>=9.0.2",
]
